CREATE TABLE "raw_assets" (
  "id" VARCHAR(255) PRIMARY KEY,
  "rank" INT,
  "symbol" VARCHAR(10),
  "name" VARCHAR(255),
  "supply" DECIMAL(20,8),
  "maxSupply" DECIMAL(20,8),
  "marketCapUsd" DECIMAL(20,2),
  "volumeUsd24Hr" DECIMAL(20,2),
  "priceUsd" DECIMAL(20,8),
  "changePercent24Hr" DECIMAL(5,2),
  "vwap24Hr" DECIMAL(20,8)
);

CREATE TABLE "raw_assets_by_id" (
  "id" VARCHAR(255) PRIMARY KEY,
  "rank" INT,
  "symbol" VARCHAR(10),
  "name" VARCHAR(255),
  "supply" DECIMAL(20,8),
  "maxSupply" DECIMAL(20,8),
  "marketCapUsd" DECIMAL(20,2),
  "volumeUsd24Hr" DECIMAL(20,2),
  "priceUsd" DECIMAL(20,8),
  "changePercent24Hr" DECIMAL(5,2),
  "vwap24Hr" DECIMAL(20,8)
);

CREATE TABLE "raw_assets_historical" (
  "priceUsd" DECIMAL(20,8),
  "time" BIGINT
);

CREATE TABLE "raw_assets_by_market" (
  "exchangeId" VARCHAR(255) PRIMARY KEY,
  "baseId" VARCHAR(255),
  "quoteId" VARCHAR(255),
  "baseSymbol" VARCHAR(10),
  "quoteSymbol" VARCHAR(10),
  "volumeUsd24Hr" DECIMAL(20,2),
  "priceUsd" DECIMAL(20,8),
  "volumePercent" DECIMAL(5,2)
);

CREATE TABLE "raw_currency_conversion" (
  "id" VARCHAR(255) PRIMARY KEY,
  "symbol" VARCHAR(10),
  "currencySymbol" VARCHAR(10),
  "rateUsd" DECIMAL(20,8),
  "type" VARCHAR(10)
);

CREATE TABLE "raw_exchanges" (
  "id" VARCHAR(255) PRIMARY KEY,
  "name" VARCHAR(255),
  "rank" INT,
  "percentTotalVolume" DECIMAL(5,2),
  "volumeUsd" DECIMAL(20,2),
  "tradingPairs" INT,
  "socket" BOOLEAN,
  "exchangeUrl" VARCHAR(255),
  "updated" BIGINT
);

CREATE TABLE "raw_market" (
  "exchangeId" VARCHAR(255),
  "baseSymbol" VARCHAR(10),
  "quoteSymbol" VARCHAR(10),
  "baseId" VARCHAR(255),
  "quoteId" VARCHAR(255),
  "assetSymbol" VARCHAR(10),
  "assetId" VARCHAR(255),
  "limit" INT,
  "offset" INT
);

CREATE TABLE "raw_candles" (
  "open" DECIMAL(20,8),
  "high" DECIMAL(20,8),
  "low" DECIMAL(20,8),
  "close" DECIMAL(20,8),
  "volume" DECIMAL(20,8),
  "period" BIGINT
);

CREATE TABLE "DIM_ASSET" (
  "ASSET_SR_KEY" INT PRIMARY KEY,
  "ASSET_ID" VARCHAR(255),
  "ASSET_SYMBOL" VARCHAR(255),
  "ASSET_NAME" VARCHAR(255)
);

CREATE TABLE "DIM_CURRENCY_RATE" (
  "CURRENCY_SR_KEY" INT PRIMARY KEY,
  "CURRENCY_ID" VARCHAR(255),
  "CURRENCY_SYMBOL" VARCHAR(255),
  "CURRENCY_TYPE_SYMBOL" VARCHAR(255),
  "CURRENCY_RATE_USD" DECIMAL(20,8)
);

CREATE TABLE "DIM_EXCHANGE" (
  "EXCHANGE_SR_KEY" INT PRIMARY KEY,
  "EXCHANGE_ID" VARCHAR(255),
  "EXCHANGE_NAME" VARCHAR(255),
  "EXCHANGE_NUM_TRADING_PAIRS" INT,
  "EXCHANGE_IS_SOCKET_AVAILABLE" VARCHAR(255),
  "EXCHANGE_URL" VARCHAR(255)
);

CREATE TABLE "DIM_MARKET" (
  "MARKET_SR_KEY" INT PRIMARY KEY,
  "EXCHANGE_ID" VARCHAR(255),
  "MARKET_BASE_SYMBOL" VARCHAR(255),
  "MARKET_BASE_ID" VARCHAR(255),
  "MARKET_QUOTE_SYMBOL" VARCHAR(255),
  "MARKET_QUOTE_ID" VARCHAR(255)
);

CREATE TABLE "DIM_DATE_TIME" (
  "DATE_TIME_SR_KEY" INT PRIMARY KEY,
  "DATE_TIME" INT
);

CREATE TABLE "FACT_ASSET_PRICE_PAST24H" (
  "FACT_ASSET_SR_KEY" INT PRIMARY KEY,
  "ASSET_SR_KEY" INT,
  "ASSET_RANK" INT,
  "ASSET_SUPPLY" DECIMAL(20,8),
  "MAX_ASSET_SUPPLY" DECIMAL(20,8),
  "ASSET_MARKET_CAP_USD" DECIMAL(20,8),
  "ASSET_VOLUME_USD" DECIMAL(20,8),
  "ASSET_PRICE_USD" DECIMAL(20,8),
  "ASSET_PERCENT_CHANGE" DECIMAL(20,8),
  "AVG_ASSET_VOLUME_WEIGHTED_PRICE_USD" DECIMAL(20,8),
  "ASSET_PRICE_TIMESTAMP_SR_KEY" INT
);

CREATE TABLE "FACT_ASSET_PRICE_HISTORICAL" (
  "ASSET_PRICE_USD" DECIMAL(20,8),
  "ASSET_PRICE_TIMESTAMP_SR_KEY" INT
);

CREATE TABLE "FACT_EXCHANGE" (
  "FACT_EXCHANGE_SR_KEY" INT PRIMARY KEY,
  "EXCHANGE_SR_KEY" INT,
  "EXCHANGE_RANK" INT,
  "EXCHANGE_VOLUME_PERCENTAGE" DECIMAL(20,8),
  "EXCHANGE_VOLUME_USD" DECIMAL(20,8),
  "EXCHANGE_UPDATE_TIME_SR_KEY" INT
);

CREATE TABLE "FACT_MARKET" (
  "FACT_MARKET_SR_KEY" INT PRIMARY KEY,
  "MARKET_SR_KEY" INT,
  "EXCHANGE_RANK" INT,
  "MARKET_PRICE_QUOTE" DECIMAL(20,8),
  "MARKET_PRICE_QUOTE_USD" DECIMAL(20,8),
  "MARKET_24H_VOLUME_USD" DECIMAL(20,8),
  "MARKET_PRESENT_EXCHANGE_VOLUME" DECIMAL(20,8),
  "MARKET_24H_TRADE_COUNT" INT,
  "MARKET_UPDATED_TIME_SR_KEY" INT
);

CREATE TABLE "FACT_CANDLE" (
  "FACT_CANDLE_SR_KEY" INT PRIMARY KEY,
  "MARKET_SR_KEY" INT,
  "CANDLE_OPEN" DECIMAL(20,8),
  "CANDLE_HIGH" DECIMAL(20,8),
  "CANDLE_LOW" DECIMAL(20,8),
  "CANDLE_CLOSE" DECIMAL(20,8),
  "CANDLE_VOLUME" DECIMAL(20,8),
  "CANDLE_UPDATED_SR_KEY" INT
);

ALTER TABLE "FACT_ASSET_PRICE_PAST24H" ADD FOREIGN KEY ("ASSET_SR_KEY") REFERENCES "DIM_ASSET" ("ASSET_SR_KEY");

ALTER TABLE "FACT_ASSET_PRICE_HISTORICAL" ADD FOREIGN KEY ("ASSET_PRICE_TIMESTAMP_SR_KEY") REFERENCES "DIM_DATE_TIME" ("DATE_TIME_SR_KEY");

ALTER TABLE "FACT_EXCHANGE" ADD FOREIGN KEY ("EXCHANGE_SR_KEY") REFERENCES "DIM_EXCHANGE" ("EXCHANGE_SR_KEY");

ALTER TABLE "FACT_EXCHANGE" ADD FOREIGN KEY ("EXCHANGE_UPDATE_TIME_SR_KEY") REFERENCES "DIM_DATE_TIME" ("DATE_TIME_SR_KEY");

ALTER TABLE "FACT_CANDLE" ADD FOREIGN KEY ("MARKET_SR_KEY") REFERENCES "DIM_MARKET" ("MARKET_SR_KEY");

ALTER TABLE "FACT_CANDLE" ADD FOREIGN KEY ("CANDLE_UPDATED_SR_KEY") REFERENCES "DIM_DATE_TIME" ("DATE_TIME_SR_KEY");

ALTER TABLE "FACT_MARKET" ADD FOREIGN KEY ("FACT_MARKET_SR_KEY") REFERENCES "DIM_MARKET" ("MARKET_SR_KEY");

ALTER TABLE "FACT_MARKET" ADD FOREIGN KEY ("MARKET_UPDATED_TIME_SR_KEY") REFERENCES "DIM_DATE_TIME" ("DATE_TIME_SR_KEY");

ALTER TABLE "FACT_ASSET_PRICE_PAST24H" ADD FOREIGN KEY ("ASSET_PRICE_TIMESTAMP_SR_KEY") REFERENCES "DIM_DATE_TIME" ("DATE_TIME_SR_KEY");
